k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotion
  labels:
    app: promotion
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: promotion
  template:
    metadata:
      labels:
        app: promotion
    spec:
      restartPolicy: Always
      containers:
        - name: promotion
          image: cluster-registry:5000/nyu-devops/promotion:1.0
          # image: promotion
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 30
            httpGet:
              path: /health
              port: 8080
          resources:
            limits:
              cpu: "0.50"
              memory: "128Mi"
            requests:
              cpu: "0.25"
              memory: "64Mi"
